--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,6 @@
     "name": "magenxcommerce/module-cms-graph-ql",
     "description": "N/A",
     "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
-    "version": "100.4.0",
     "require": {
         "php": "~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
@@ -19,6 +14,10 @@
         "magento/module-graph-ql-cache": "100.4.*",
         "magento/module-store-graph-ql": "100.4.*"
     },
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -26,5 +25,6 @@
         "psr-4": {
             "Magento\\CmsGraphQl\\": ""
         }
-    }
+    },
+    "version": "100.4.0"
 }
