--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,10 @@
     "description": "N/A",
     "type": "magento2-module",
     "require": {
-        "php": "~7.3.0||~7.4.0",
-        "magento/framework": "103.0.*",
-        "magento/module-cms": "104.0.*",
-        "magento/module-widget": "101.2.*",
-        "magento/module-store": "101.1.*"
-    },
-    "suggest": {
-        "magento/module-graph-ql": "100.4.*",
-        "magento/module-graph-ql-cache": "100.4.*",
-        "magento/module-store-graph-ql": "100.4.*"
+        "php": "~7.1.3||~7.2.0",
+        "magento/framework": "102.0.*",
+        "magento/module-cms": "103.0.*",
+        "magento/module-widget": "101.1.*"
     },
     "license": [
         "OSL-3.0",
@@ -26,5 +20,5 @@
             "Magento\\CmsGraphQl\\": ""
         }
     },
-    "version": "100.4.0"
+    "version": "100.3.0"
 }
