--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "magenxcommerce/module-cms-graph-ql",
     "description": "N/A",
     "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+    "version": "100.3.4",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
@@ -13,10 +18,6 @@
         "magento/module-graph-ql-cache": "100.3.*",
         "magento/module-store-graph-ql": "100.3.*"
     },
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -24,6 +25,5 @@
         "psr-4": {
             "Magento\\CmsGraphQl\\": ""
         }
-    },
-    "version": "100.3.4"
+    }
 }
